--- a/config/database.yml
+++ b/config/database.yml
@@ -13,5 +13,5 @@ test:
 production:
   <<: *default
   database: strava-with-friends_production
-  username: peachcram
-  password: 123
+  # username: peachcram
+  # password: 123
